titanic study case added

--- a/notebooks/01 - Carga de datos con Python.ipynb
+++ b/notebooks/01 - Carga de datos con Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "c7b996cb",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
    ],
    "source": [
     "import csv\n",
-    "with open ('dataset/question3.csv') as csvFile:\n",
+    "with open ('../datasets/question3.csv') as csvFile:\n",
     "    reader = csv.reader(csvFile, delimiter = \",\")\n",
     "    for row in reader:\n",
     "        print(row)"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "df79d433",
    "metadata": {
     "scrolled": false
@@ -50,7 +50,7 @@
    ],
    "source": [
     "import csv\n",
-    "with open ('dataset/salesman.txt') as csvFile:\n",
+    "with open ('../datasets/salesman.txt') as csvFile:\n",
     "    reader = csv.reader(csvFile, delimiter = \",\")\n",
     "    for row in reader:\n",
     "        print(row)"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "cf61e505",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
    ],
    "source": [
     "import csv\n",
-    "with open ('dataset/times2.csv') as csvFile:\n",
+    "with open ('../datasets/times2.csv') as csvFile:\n",
     "    reader = csv.reader(csvFile, delimiter = \";\")\n",
     "    for row in reader:\n",
     "        print(row)"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "efca78dc",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
    ],
    "source": [
     "import csv\n",
-    "with open ('dataset/salesman.txt') as csvFile:\n",
+    "with open ('../datasets/salesman.txt') as csvFile:\n",
     "    reader = csv.DictReader(csvFile, delimiter = \",\")\n",
     "    for row in reader:\n",
     "        print(row)"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "017ee4c5",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
    ],
    "source": [
     "import csv\n",
-    "with open ('dataset/msft.csv', encoding='utf-8') as csvFile:\n",
+    "with open ('../datasets/msft.csv', encoding='utf-8') as csvFile:\n",
     "    sample = csvFile.read(64)\n",
     "    has_header = csv.Sniffer().has_header(sample)\n",
     "    print(has_header)\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "35ff09b8",
    "metadata": {},
    "outputs": [
@@ -2986,7 +2986,13 @@
       "['Solitaire Spider 2019,4,371,Kids and Famil', ',28-01-2019,Free']\n",
       "['Kids Puzzles game for toddlers. Animal jigsaw for children 2-4,4.5,941,Kids and Famil', ',13-08-2018,Free']\n",
       "['Pol', 'sphere 3D roll Puzzle Game,3.5,513,Kids and Famil', ',05-02-2019,Free']\n",
-      "['BitLife Bab', ' Care,4,254,Kids and Famil', ',17-07-2019,Free']\n",
+      "['BitLife Bab', ' Care,4,254,Kids and Famil', ',17-07-2019,Free']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Art Book,4,507,Kids and Famil', ',04-02-2014,Free']\n",
       "['Hotel Trans', 'lvania Games,4,267,Kids and Famil', ',24-10-2018,Free']\n",
       "['Kids Math Game : Add Subtract Multiplication Free,1,402,Kids and Famil', ',10-10-2019,Free']\n",
@@ -3229,13 +3235,7 @@
       "['Christmas Design,4,245,Kids and Famil', ',30-01-2018,Free']\n",
       "['Little Red Riding Hood : Shin', 'Tales,4,414,Kids and Famil', ',13-07-2015,Free']\n",
       "['Moomin and the Lost Belongings,3.5,586,Kids and Famil', ',15-06-2015,Free']\n",
-      "['Ma', 'a the Bee Paint,4.5,968,Kids and Famil', ',25-09-2018,Free']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Ma', 'a the Bee Paint,4.5,968,Kids and Famil', ',25-09-2018,Free']\n",
       "['Kid Search,4.5,758,Kids and Famil', ',24-05-2017,Free']\n",
       "['Fruit and Vegetable Coloring Pages for Kids,3,564,Kids and Famil', ',25-10-2012,Free']\n",
       "['Paint Team Umizoomi,5,128,Kids and Famil', ',20-10-2018,Free']\n",
@@ -5476,11 +5476,19 @@
     }
    ],
    "source": [
-    "with open ('dataset/msft.csv', encoding='utf-8') as csvFile:\n",
+    "with open ('../datasets/msft.csv', encoding='utf-8') as csvFile:\n",
     "    reader = csv.reader(csvFile, deduced_dialect)\n",
     "    for row in reader:\n",
     "        print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c1cb883",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
