--- a/notebooks/02 - Carga de datos con Pandas.ipynb
+++ b/notebooks/02 - Carga de datos con Pandas.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "c0f774ea",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset/question3.csv')\n",
+    "df = pd.read_csv('../datasets/question3.csv')\n",
     "print(df)"
    ]
   },
@@ -54,13 +54,13 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset/salesman.txt')\n",
+    "df = pd.read_csv('../datasets/salesman.txt')\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4a6f7cec",
    "metadata": {},
    "outputs": [
@@ -77,13 +77,13 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset/times2.csv', sep = ';')\n",
+    "df = pd.read_csv('../datasets/times2.csv', sep = ';')\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "37546a56",
    "metadata": {},
    "outputs": [
@@ -97,19 +97,18 @@
       "2   3     19          BEST\n",
       "3   4     13  INTERMEDIATE\n",
       "4   5      8         WORST\n",
-      "5   6     15          BEST\n",
-      "3\n"
+      "5   6     15          BEST\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset/times.csv', usecols=['ID','SCORE','CLASS'])\n",
+    "df = pd.read_csv('../datasets/times.csv', usecols=['ID','SCORE','CLASS'])\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "65cee5db",
    "metadata": {},
    "outputs": [
@@ -126,13 +125,13 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset/question3.csv', usecols=[1,3])\n",
+    "df = pd.read_csv('../datasets/question3.csv', usecols=[1,3])\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "848027d2",
    "metadata": {},
    "outputs": [
@@ -150,13 +149,13 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset/question3.csv', names=['name', 'value1', 'value2', 'value3'])\n",
+    "df = pd.read_csv('../datasets/question3.csv', names=['name', 'value1', 'value2', 'value3'])\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "f0e95a85",
    "metadata": {},
    "outputs": [
@@ -173,7 +172,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset/question3.csv', names=['name', 'value1', 'value2', 'value3'], skiprows=1)\n",
+    "df = pd.read_csv('../datasets/question3.csv', names=['name', 'value1', 'value2', 'value3'], skiprows=1)\n",
     "print(df)"
    ]
   },
@@ -204,7 +203,7 @@
     }
    ],
    "source": [
-    "df = pd.read_html('dataset/page.html')\n",
+    "df = pd.read_html('../datasets/page.html')\n",
     "print('Total tables:', len(df))\n",
     "print(df[0])\n",
     "print(df[1])"
@@ -212,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "82c4b734",
    "metadata": {},
    "outputs": [
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "ddef1ff9",
    "metadata": {},
    "outputs": [
@@ -264,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "8d2fbe91",
    "metadata": {},
    "outputs": [
@@ -283,9 +282,9 @@
       " 3   GDP growth(real)                                  41 non-null     object \n",
       " 4   Inflation rate(in %)                              41 non-null     object \n",
       " 5   Unemployment(in %)                                41 non-null     object \n",
-      " 6   Budget balance(in % of GDP)[106]                  41 non-null     object \n",
-      " 7   Government debt held by public(in % of GDP)[107]  41 non-null     object \n",
-      " 8   Current accountbalance(in % of GDP)               41 non-null     object \n",
+      " 6   Budget balance(in % of GDP)[116]                  41 non-null     object \n",
+      " 7   Government debt held by public(in % of GDP)[117]  41 non-null     object \n",
+      " 8   Current accountbalance(in % of GDP)               40 non-null     object \n",
       "dtypes: float64(1), int64(1), object(7)\n",
       "memory usage: 3.0+ KB\n"
      ]
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "d95cd226",
    "metadata": {},
    "outputs": [
@@ -324,13 +323,13 @@
     }
    ],
    "source": [
-    "df = pd.read_xml('dataset/dataXML.xml')\n",
+    "df = pd.read_xml('../datasets/dataXML.xml')\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "e8d3b966",
    "metadata": {},
    "outputs": [
@@ -350,6 +349,14 @@
    "source": [
     "print(df['name'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22d819c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
