--- a/notebooks/01 - Carga de datos con Python.ipynb
+++ b/notebooks/01 - Carga de datos con Python.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ï»¿', 'Column 1', 'Column 2', 'Column 3']\n",
+      "['\\ufeff', 'Column 1', 'Column 2', 'Column 3']\n",
       "['Row 1', '15.5', '12.14', '65.9']\n",
       "['Row 2', '18.6', '23.56', '45.2']\n",
       "['Row 3', '21.4', '47.02', '21.63']\n",
@@ -77,7 +77,7 @@
    "source": [
     "import csv\n",
     "with open ('../datasets/times2.csv') as csvFile:\n",
-    "    reader = csv.reader(csvFile, delimiter = \";\")\n",
+    "    reader = csv.reader(csvFile, delimiter = \";\") #\"\\t\"\n",
     "    for row in reader:\n",
     "        print(row)"
    ]
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "017ee4c5",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "35ff09b8",
    "metadata": {},
    "outputs": [
@@ -2723,7 +2723,13 @@
       "['6 Minutes to Skinn', ' Review PDF eBook Book Download Online,3,435,Health and Fitness,04-11-2019,Free']\n",
       "['Fitness Foundation,4.5,138,Health and Fitness,14-02-2015,Free']\n",
       "['WODconnect,3.5,923,Health and Fitness,15-06-2015,Free']\n",
-      "['AnesthesiaOS,4,972,Health and Fitness,30-01-2018,Free']\n",
+      "['AnesthesiaOS,4,972,Health and Fitness,30-01-2018,Free']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['CPS Workout Tracker,2.5,262,Health and Fitness,06-11-2016,Free']\n",
       "['Heat Map Generator,2.5,374,Health and Fitness,19-02-2016,Free']\n",
       "['Get A Move!,5,809,Health and Fitness,15-04-2020,Free']\n",
@@ -2986,13 +2992,7 @@
       "['Solitaire Spider 2019,4,371,Kids and Famil', ',28-01-2019,Free']\n",
       "['Kids Puzzles game for toddlers. Animal jigsaw for children 2-4,4.5,941,Kids and Famil', ',13-08-2018,Free']\n",
       "['Pol', 'sphere 3D roll Puzzle Game,3.5,513,Kids and Famil', ',05-02-2019,Free']\n",
-      "['BitLife Bab', ' Care,4,254,Kids and Famil', ',17-07-2019,Free']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['BitLife Bab', ' Care,4,254,Kids and Famil', ',17-07-2019,Free']\n",
       "['Art Book,4,507,Kids and Famil', ',04-02-2014,Free']\n",
       "['Hotel Trans', 'lvania Games,4,267,Kids and Famil', ',24-10-2018,Free']\n",
       "['Kids Math Game : Add Subtract Multiplication Free,1,402,Kids and Famil', ',10-10-2019,Free']\n",
@@ -5093,7 +5093,13 @@
       "['Feed Viewer,4,791,News and Weather,15-02-2012,Free']\n",
       "['GMA News,4.5,157,News and Weather,26-02-2014,Free']\n",
       "['Danish news,5,162,News and Weather,19-12-2017,Free']\n",
-      "['Storm Chasers,5,367,News and Weather,22-02-2018,Free']\n",
+      "['Storm Chasers,5,367,News and Weather,22-02-2018,Free']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['News from Nepal,4.5,736,News and Weather,13-11-2017,Free']\n",
       "['The Independent,2,151,News and Weather,11-11-2015,Free']\n",
       "['HNA,3,567,News and Weather,08-07-2013,Free']\n",
