--- a/06-2-actividad-visualizacion.ipynb
+++ b/06-2-actividad-visualizacion.ipynb
@@ -1,1 +1,246 @@
-{"cells":[{"cell_type":"markdown","metadata":{"id":"Zlev5tghCy2G"},"source":["# Actividad - Visualización"]},{"cell_type":"code","source":["# !pip install numpy scipy matplotlib seaborn scikit-learn -q"],"metadata":{"id":"4CwHG8Cm2uYt"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"UzLPBnd5C4xy"},"source":["* **Nombre:**\n","* **Matrícula:**"]},{"cell_type":"markdown","metadata":{"id":"CIeakL6CDCTC"},"source":["**Entregar:** Archivo PDF de la actividad, así como el archivo .ipynb en tu repositorio.\n","**Nota:** Recuerda habrá una penalización de **50** puntos si la actividad fue entregada fuera de la fecha límite."]},{"cell_type":"markdown","metadata":{"id":"tU8Hn1jdDNTc"},"source":["Carga el conjunto de datos `bestsellers with categories.csv` (se encuentra en el repositorio de la clase) y realiza un análisis estadístico de las variables."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"7ehdNB9iDBi7"},"outputs":[],"source":["# Carga las librerías necesarias."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"vvPwkAtkDasd"},"outputs":[],"source":["# Carga el conjunto de datos al ambiente de Google Colab y muestra los primeros\n","# 6 renglones."]},{"cell_type":"markdown","metadata":{"id":"HjeUwH4QE7QZ"},"source":["El conjunto de datos es una tabla que contiene el top 50 de los libros más vendidos por Amazon por año desde 2009 hasta 2019. Cada libro está clasificado como Ficción o No ficción.\n","\n","Las variables que contiene son:\n","* **Name**: Nombre del libro.\n","* **Author**: Autor.\n","* **User Rating**: Calificación promedio que los usuarios asignaron al libro (1-5).\n","* **Reviews**: Número de reseñas.\n","* **Price**: Precio del libro.\n","* **Year**: Año de publicación.\n","* **Genre**: Género literario (ficción/no ficción)."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"5dD7I6aKDej4"},"outputs":[],"source":["# Crea una tabla resumen con los estadísticas generales de las variables\n","# numéricas."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"x8bICM2jWhlv"},"outputs":[],"source":["## ¿Cuál es el género con más publicaciones? Muéstralo en un gráfico."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"6ltAP9g_WmOe"},"outputs":[],"source":["# ¿Cuántos libros del top 50 se publicaron por género en cada año? ¿Hay algún\n","# año donde hubo más libros de ficción en el top 50?. Muéstralo en un gráfico."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"StkJSlIrW2Eh"},"outputs":[],"source":["# ¿Cómo se distribuye la variable Review? Muéstra el histografa."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"asBtbc1EW8uu"},"outputs":[],"source":["# Ahora muéstralo en un gráfico de caja y bigote."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"w80cF_5PXKUY"},"outputs":[],"source":["# ¿Cómo se compara la evaluación del libro por género? ¿Qué genero es mejor\n","# evaluado por los lectores? Muéstralo en un solo gráfico de caja y bigote."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"zFPF2vaAXaRE"},"outputs":[],"source":["# ¿Cuál es la relación entre el número de reseñas y precios? Muéstralo en un\n","# gráfico de dispersión."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"2ZoXt7kGXl41"},"outputs":[],"source":["# De la pregunta anterior, ¿influye algo el año de publicación? ¿Cuál es la\n","# relación entre el número de reseñar, el precio y el año de publicación?\n","# IMPORTANTE: Selecciona una paleta de colores adeacuada."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"NA23-VRGXzUD"},"outputs":[],"source":["# ¿Cuál es la correlación entre las variables numéricas? Muéstralo en un\n","# gráfico. La variable año, a pesar de ser numérica, la vamos a considerar como\n","# cualitativa, así que la eliminaremos del análisis."]},{"cell_type":"markdown","metadata":{"id":"3pFUTbXaYD_g"},"source":["¿Cuáles variables tiene una fuerte relación positiva entre sí y cuáles tienen una fuerte relación negativa? (Esta pregunta no es de código) Responde la pregunta en la siguiente celda de texto."]},{"cell_type":"markdown","metadata":{"id":"JWpmO7wmYQL4"},"source":["** Escribe tu respuesta **"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"Qsq691eDYROH"},"outputs":[],"source":["# Haz una gráfica donde podemos comparar la relación entre las tres variables\n","# numéricas (User Rating, Reviews y Price) y que, además, podamos ver el efecto\n","# del libro. La variable año, a pesar de ser numérica, la vamos a considerar como\n","# cualitativa, así que la eliminaremos del análisis."]}],"metadata":{"colab":{"provenance":[]},"kernelspec":{"display_name":"Python 3","name":"python3"},"language_info":{"name":"python"}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Zlev5tghCy2G"
+   },
+   "source": [
+    "# Actividad - Visualización"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "4CwHG8Cm2uYt"
+   },
+   "outputs": [],
+   "source": [
+    "# !pip install numpy scipy matplotlib seaborn scikit-learn -q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "UzLPBnd5C4xy"
+   },
+   "source": [
+    "* **Nombre:**\n",
+    "* **Matrícula:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "CIeakL6CDCTC"
+   },
+   "source": [
+    "**Entregar:** Una vez que hayas terminado, sube el Cuaderno en la actividad correspondiente en Canvas. **Nota:** Recuerda habrá una penalización de **40** puntos si la actividad fue entregada fuera de la fecha límite."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "tU8Hn1jdDNTc"
+   },
+   "source": [
+    "Carga el conjunto de datos `bestsellers with categories.csv` (se encuentra en el repositorio de la clase) y realiza un análisis estadístico de las variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "7ehdNB9iDBi7"
+   },
+   "outputs": [],
+   "source": [
+    "# Carga las librerías necesarias."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "vvPwkAtkDasd"
+   },
+   "outputs": [],
+   "source": [
+    "# Carga el conjunto de datos al ambiente de Google Colab y muestra los primeros\n",
+    "# 6 renglones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "HjeUwH4QE7QZ"
+   },
+   "source": [
+    "El conjunto de datos es una tabla que contiene el top 50 de los libros más vendidos por Amazon por año desde 2009 hasta 2019. Cada libro está clasificado como Ficción o No ficción.\n",
+    "\n",
+    "Las variables que contiene son:\n",
+    "* **Name**: Nombre del libro.\n",
+    "* **Author**: Autor.\n",
+    "* **User Rating**: Calificación promedio que los usuarios asignaron al libro (1-5).\n",
+    "* **Reviews**: Número de reseñas.\n",
+    "* **Price**: Precio del libro.\n",
+    "* **Year**: Año de publicación.\n",
+    "* **Genre**: Género literario (ficción/no ficción)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "5dD7I6aKDej4"
+   },
+   "outputs": [],
+   "source": [
+    "# Crea una tabla resumen con los estadísticas generales de las variables\n",
+    "# numéricas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "x8bICM2jWhlv"
+   },
+   "outputs": [],
+   "source": [
+    "## ¿Cuál es el género con más publicaciones? Muéstralo en un gráfico."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "6ltAP9g_WmOe"
+   },
+   "outputs": [],
+   "source": [
+    "# ¿Cuántos libros del top 50 se publicaron por género en cada año? ¿Hay algún\n",
+    "# año donde hubo más libros de ficción en el top 50?. Muéstralo en un gráfico."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "StkJSlIrW2Eh"
+   },
+   "outputs": [],
+   "source": [
+    "# ¿Cómo se distribuye la variable Review? Muéstra el histografa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "asBtbc1EW8uu"
+   },
+   "outputs": [],
+   "source": [
+    "# Ahora muéstralo en un gráfico de caja y bigote."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "w80cF_5PXKUY"
+   },
+   "outputs": [],
+   "source": [
+    "# ¿Cómo se compara la evaluación del libro por género? ¿Qué genero es mejor\n",
+    "# evaluado por los lectores? Muéstralo en un solo gráfico de caja y bigote."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "zFPF2vaAXaRE"
+   },
+   "outputs": [],
+   "source": [
+    "# ¿Cuál es la relación entre el número de reseñas y precios? Muéstralo en un\n",
+    "# gráfico de dispersión."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "2ZoXt7kGXl41"
+   },
+   "outputs": [],
+   "source": [
+    "# De la pregunta anterior, ¿influye algo el año de publicación? ¿Cuál es la\n",
+    "# relación entre el número de reseñar, el precio y el año de publicación?\n",
+    "# IMPORTANTE: Selecciona una paleta de colores adeacuada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "NA23-VRGXzUD"
+   },
+   "outputs": [],
+   "source": [
+    "# ¿Cuál es la correlación entre las variables numéricas? Muéstralo en un\n",
+    "# gráfico. La variable año, a pesar de ser numérica, la vamos a considerar como\n",
+    "# cualitativa, así que la eliminaremos del análisis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "3pFUTbXaYD_g"
+   },
+   "source": [
+    "¿Cuáles variables tiene una fuerte relación positiva entre sí y cuáles tienen una fuerte relación negativa? (Esta pregunta no es de código) Responde la pregunta en la siguiente celda de texto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "JWpmO7wmYQL4"
+   },
+   "source": [
+    "** Escribe tu respuesta **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Qsq691eDYROH"
+   },
+   "outputs": [],
+   "source": [
+    "# Haz una gráfica donde podemos comparar la relación entre las tres variables\n",
+    "# numéricas (User Rating, Reviews y Price) y que, además, podamos ver el efecto\n",
+    "# del libro. La variable año, a pesar de ser numérica, la vamos a considerar como\n",
+    "# cualitativa, así que la eliminaremos del análisis."
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
